--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ Jinja2==2.10.3
 joblib==0.14.1
 MarkupSafe==1.1.1
 numpy==1.18.1
+pandas==0.25.3
+python-dateutil==2.8.1
+pytz==2019.3
+six==1.14.0
 Pillow==7.0.0
 scikit-learn==0.22.1
 scipy==1.4.1
